--- a/SelfWritten/inputeField.html
+++ b/SelfWritten/inputeField.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="inputeField.css">
+    
+
 </head>
 <body>
     <div>
         <h1>Simple DOM  todo app</h1>
-        <input type="text" id="inputField"/>
+        <input type="text" placeholder="type something...." id="inputField"/>
         <button class="btn">click me</button>
         <div class="todoListElem"> 
     </div>
